# TinyBlender

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: FindOpenMesh.cmake
cmake/cmake-library/VCI/: VCIQt.cmake
required/ACG/: CMakeLists.txt
required/ACG/Algorithm/: DBSCANT.hh
required/ACG/Config/: ACGDefines.hh
required/ACG/Docu/: nonFixedPipeline.docu
required/ACG/GL/: AntiAliasing.cc  ColorStack.cc  ColorTranslator.cc  DrawMesh.cc  DrawMeshT_impl.cc  DrawMeshT_impl.hh  FBO.hh  FilterKernels.hh  GLState.hh  GLTrackball.cc  GLTrackball.hh  IRenderer.cc  MeshCompiler.hh  ShaderCache.hh  ShaderGenerator.hh  VertexDeclaration.cc  VertexDeclaration.hh  acg_glew.hh  gl.hh  globjects.cc  globjects.hh  stipple_alpha.hh
required/ACG/Geometry/: Algorithms.hh  AlgorithmsAngleT_impl.hh  GPUCacheOptimizer.hh  Triangulator.hh
required/ACG/Geometry/bsp/: BSPImplT_impl.hh
required/ACG/Math/: BSplineBasis.cc  BSplineBasis.hh  DualQuaternionT.hh  Matrix3x3T.hh
required/ACG/Mesh/: SmartTaggerT.hh
required/ACG/QtScenegraph/: QtTranslationManipulatorNode.cc  QtTranslationManipulatorNode.hh
required/ACG/QtWidgets/: QtApplication.hh  QtColorChooserButton.hh  QtCoordFrameDialog.cc  QtCoordFrameDialog.hh  QtFileDialog.cc  QtFileDialog.hh  QtHistogramWidget.cc  QtMaterialDialog.hh  QtPrincipalAxisDialogBaseUi.ui  QtSceneGraphWidget.cc  QtSceneGraphWidget.hh  QtWheel.cc
required/ACG/QwtWidgets/: QwtHistogramm.cc
required/ACG/Scenegraph/: BaseNode.cc  BoundingBoxNode.cc  CartesianClippingNode.cc  CartesianClippingNode.hh  CoordFrameNode.hh  CoordsysNode.cc  DrawModes.cc  EnvMapNode.cc  EnvMapNode.hh  FloatingSubtreeNode.cc  FloatingSubtreeNode.hh  GridNode.cc  LightSourceNode.cc  LineNode.hh  LineNodeGLCompat.cc  MaterialNode.cc  MeshNode2.cc  MeshNode2T.hh  MeshNodeDeprecatedT.hh  MeshNodeDeprecatedT_impl.hh  OBJNode.cc  OSDTransformNode.hh  PointNode.cc  PrincipalAxisNode.cc  PrincipalAxisNodeT_impl.hh  QuadNode.cc  QuadNode.hh  SceneGraph.hh  SeparatorNode.cc  ShaderNode.cc  SliceNode.hh  StatusNodesT.hh  StatusNodesT_impl.hh  StencilRefNode.hh  SwitchNode.hh  TextNode.cc  TextNode.hh  TextNodeGLCompat.cc  Texture3DNode.cc  Texture3DNode.hh  (+5 more)
required/ACG/ShaderUtils/: GLSLShader.cc  GLSLShader.hh  UniformPool.cc  UniformPool.hh
required/ACG/Utils/: ColorCoder.cc  ColorConversion.hh  HaltonColors.hh  HeapT.hh  Histogram.cc  Histogram.hh  IColorCoder.hh  ImageConversion.hh  LinearTwoColorCoder.cc  Noncopyable.hh  Tracing.cc  VSToolsT.hh
required/ACG/tests/: main.cc
required/ACG/tests/Geometry/: Algorithms_ClosestPoints_tests.cc  Algorithms_test.cc  Spherical_test.cc
required/ACG/tests/Math/: Matrix3x3.cc  math_test.cc
required/ACG/tests/MeshCompiler/: MeshCompiler_test.cc  MeshCompiler_testData0.cc  MeshCompiler_testData1.cc
required/Math_Tools/: Math_Tools.hh  Math_ToolsT_impl.hh
required/Math_Tools/ICP/: ICP.hh  ICPT_impl.hh
required/Math_Tools/PCA/: PCA.hh  PCAT_impl.hh
required/MeshTools/: Curvature.hh  CurvatureT_impl.hh  MeshFunctions.hh  MeshFunctionsT_impl.hh  MeshInfoT.hh  MeshInfoT_impl.hh  MeshNavigationT.hh  MeshNavigationT_impl.hh  MeshSelectionT.hh  MeshSelectionT_impl.hh
required/OpenMesh/: CMakeLists.txt
required/OpenMesh/cmake/: FindOpenMesh.cmake
required/OpenMesh/src/OpenMesh/Tools/VDPM/: VHierarchyWindow.cc
required/glew-cmake/: CMakeLists.txt
resources/: tinyblender.qrc
source/: CMakeLists.txt  TinyBlender.cpp  core.cpp  core.h  corewidget.cpp  corewidget.h  graphicsview.cpp  graphicsview.h  main.cpp  mainwindow.cpp  mainwindow.h  pch.h  settings.h  tinyblenderoptions.cpp  tinyblenderoptions.h  tinyblendersettings.cpp  tinyblendersettings.h
source/Log/: CMakeLists.txt  LogType.h  Logger.cc  Logger.hh
source/common/: CMakeLIsts.txt  DataTypes.h  DataTypes.hh  baseobject.cpp  baseobject.h  groupobject.h  objectfactory.h  objectmanager.cpp  objectmanager.h  sceneobject.h
source/core/: CMakeLists.txt  core.cpp  core.h  graphicsview.cpp  mainwindow.cpp  mainwindow.h  options.cpp  options.h  settings.cpp  signal.h
source/interface/: BaseInterface.h  CMakeLists.txt  LogInterface.h  fileinterface.h  menuinterface.h  objectinterface.h  typeinterface.h
source/math/: VectorT.hh
source/objects/: CMakeLIsts.txt
source/objects/OpenMesh/: CMakeLIsts.txt  meshobject.h  polymeshobject.cpp  polymeshobject.h
source/primitives/: CMakeLIsts.txt  primitivesGenerator.cpp  primitivesGenerator.h
